# SLAE

./: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  test_CG.cpp  test_Descent.cpp  test_GMRES.cpp  test_GZ.cpp  test_Jacobi.cpp  test_MPI.cpp  test_MPI_fast.cpp  test_SOR.cpp  test_csr.cpp  test_dense.cpp  test_descent.cpp  test_do_graph.cpp  test_dridiagonal.cpp
ThirdDiagonalMatrix/: third_diagonal.cpp  third_diagonal.h
ThreeDiagonalMatrix/: three_diagonal.cpp  three_diagonal.h  three_diagonal.hpp
images/: GZ.txt  Jacobi.txt  MPI.txt
solve/: TreeDiagonalSolve.cpp  TreeDiagonalSolve.h  TreeDiagonalSolve.hpp
src/: CMakeLists.txt  dense_matrix.hpp  sparse.h  three_diagonal.hpp
src/solve/: BiSG.hpp  CG.hpp  Descent.hpp  GMRES.hpp  GZ.hpp  GaussSeidel.hpp  Householder.hpp  Jacobi.hpp  MPI.hpp  MPI_fast.hpp  SOR.hpp  ThreeDiagonalSolve.hpp  TreeDiagonalSolve.hpp
src/sparse/: multiply_sparse_vector.hpp  sparse.h  sparse.hpp
